test/tests/compiler/18_structures/invalid_parse/extra_credit/union_member_initializer.plx
type union a (
    # union members cannot have initializers
    member: i32 = 1
)
